SET(AGENT_SOURCE_DIR "${CMAKE_SOURCE_DIR}/src")

ADD_SUBDIRECTORY( net )

ADD_EXECUTABLE(mapper mapper.cpp main.cpp)

TARGET_LINK_LIBRARIES(mapper net)

SET( CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/bin/")

INSTALL(DIRECTORY data DESTINATION ${CMAKE_INSTALL_PREFIX})

INSTALL(TARGETS mapper RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
